# kv-py

./: .gitignore  README.md  pyproject.toml
kv/: __init__.py  __main__.py
kvsh/: __init__.py
tests/: test_kv.py
