[tool.poetry]
name = "kv"
version = "0.1.0"
description = "Persistent key-value store for the command line"
authors = ["Aatif Syed <aatifsyedyp@gmail.com>"]
readme = "README.md"
repository = "https://github.com/aatifsyed/kv"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
xdg = "^5.1.1"
argcomplete = "^1.12.3"
jsonschema = "^4.2.1"
dataclasses-json = "^0.5.6"
logging-actions = "^0.1.6"
argparse = "^1.4.0"
regex = "^2021.11.10"
ZODB = "^5.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^21.11b0"
ipython = "^7.29.0"
mypy = "^0.910"

[tool.poetry.scripts]
kv = 'kv:main'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "info"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
